--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
  <head> 		
-  <!-- <link rel="stylesheet" type="text/css" href="styles1.css"> -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
-  <link rel="stylesheet" type="text/css" href="styles2.css"> 
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100, 700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles1.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!-- <link rel="stylesheet" type="text/css" href="styles2.css">  -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100, 700" rel="stylesheet"> -->
  </head>
  <body>
    <nav>
-     <img src="file:///Users/julianenochs/Downloads/dogdownload/dog-icon.svg" alt="dog-logo" class="logo" align="left"> <br>
- 		<ul style="list-style: none">
+     <img 
+     	src="file:///Users/julianenochs/Downloads/dogdownload/dog-icon.svg" 
+     	alt="dog-logo" 
+     	class="logo" 
+     	align="left"
+     > 
+    <br>
+ 	<ul style="list-style: none">
  		<li><a href="#how-to-dog">How To Dog</a></li>
  	    <li><a href="#what-is-dogs">What Is Dogs</a></li>
  	    <li><a href="#facts-from-dogs">Facts From Dogs</a></li>
@@ -17,46 +23,105 @@
    </nav>
    <div class="top-site">
 	<h1>A Site About <strong>Some Dogs</strong></h1>
-	 <img src="/Users/julianenochs/Downloads/dogdownload/dog1-sq.jpg" class="dog-photo1" alt="dog1">
+	 <img 
+	 	src="/Users/julianenochs/Downloads/dogdownload/dog1-sq.jpg" 
+	 	class="dog-photo1" 
+	 	alt="dog1"
+	 >
+	 <div class="form">
 	 <form action="example.com">
 	   	<label for="name" class="form-input">Name<br>
 	   	</label>
-	   	<input type="text" id="name" size="40" name="name"> <br> <br>
-	   </form>
-		 <button class="button1">Name This Dog</button>
+	   	<input 
+	   		type="text" 
+	   		id="name" 
+	   		size="40" 
+	   		name="name"
+	   	> 
+		<br> <br>
+	 </form>
+		 <button class="submit-button">Name This Dog</button>
+	</div>
    </div>
 	<div class="middle-site">
-	<div class="row row2">
-	    	<h2>How To Dog</h2>
-	    	<img src="file:///Users/julianenochs/Downloads/dogdownload/dog2-sq.jpg" class="dog-photo" alt="dog2.jpg">
-	    	<p class="text-box">Dat tungg tho pupperino length boy. borkdrive aqua doggo. Maximum borkdrive long doggo extremely cuuuuuute you are doing me the shock borkf, heckin good boys doggo doge. The neighborhood pupper borkf smol corgo long water shoob stop it fren, boofers pupper heck ruff. 
-	    	</p>
-         <button class="button2" id="how-button">How</button>
-	</div>
-	<div class="row row2">
-				<h2>What Is Dogs</h2>
-			<img src ="/Users/julianenochs/Downloads/dogdownload/dog3-sq.jpg" class="dog-photo" alt="dog3.jpg"> 
-			  <p class="text-box">Long doggo smol borking doggo with a long snoot for pats pupperino h*ck heckin angery woofer shoober aqua doggo heck, doggo aqua doggo most angery pupper I have ever seen heckin angery woofer pupper. ruff adorable doggo very hand that feed shibe. Extremely cuuuuuute corgo waggy wags stop it fren.
+		<div class="content content-1">
+		    	<h2 class="content-header">How To Dog</h2>
+		    	<img
+		    		src="file:///Users/julianenochs/Downloads/dogdownload/dog2-sq.jpg"
+		    		class="dog-photo"
+		    		alt="dog2.jpg"
+		    	>
+		    	<div class="text-box">
+		    		<p>
+		    			Dat tungg tho pupperino length boy. borkdrive aqua doggo. Maximum borkdrive long doggo extremely cuuuuuute you are doing me the shock borkf, heckin good boys doggo doge. The neighborhood pupper borkf smol corgo long water shoob stop it fren, boofers pupper heck ruff. 
+		    		</p>
+		    	</div>
+	         <button 
+	         	class="content-button" 
+	         	id="how-button"
+	         >
+	         	How
+	         </button>
+		</div>
+		<div class="content content-2">
+			<h2 class="content-header">What Is Dogs</h2>
+			<img
+				src ="/Users/julianenochs/Downloads/dogdownload/dog3-sq.jpg" 
+				class="dog-photo"
+				alt="dog3.jpg"
+			>
+			<div class="text-box">
+				<p>
+					Long doggo smol `borking doggo with a long snoot for pats pupperino h*ck heckin angery woofer shoober aqua doggo heck, doggo aqua doggo most angery pupper I have ever seen heckin angery woofer pupper. ruff adorable doggo very hand that feed shibe. Extremely cuuuuuute corgo waggy wags stop it fren.
 			  </p>
-         <button class="button2" id="what-button">What</button>
+			</div>
+         	<button
+         		class="content-button"
+         		id="what-button">What
+         	</button>
+		</div>
+		<div class="content content-3">		
+			<h2 class="content-header">
+				Facts From Dogs
+			</h2>
+			<img
+				src="file:///Users/julianenochs/Downloads/dogdownload/dog4-sq.jpg"
+				class="dog-photo"
+				alt="dog4.jpg"
+			>
+			<div class="text-box">
+				<p>
+					Most angery pupper I have ever seen treat heck, dat tungg tho. You are doin me a concern shibe such treat ruff heck, stop it fren ur givin me a spool. Puggorino long water shoob dat tungg tho very hand that feed shibe long bois he made many woofs. 
+		        </p>
+			</div>
+	         <button class="content-button" id="facts-button">Facts
+	         </button>
+	    </div> <br>
 	</div>
-	<div class="row row3">		
-			<h2>Facts From Dogs</h2>
-		<img src="file:///Users/julianenochs/Downloads/dogdownload/dog4-sq.jpg" class="dog-photo" alt="dog4.jpg">
-        <p class="text-box">Most angery pupper I have ever seen treat heck, dat tungg tho. You are doin me a concern shibe such treat ruff heck, stop it fren ur givin me a spool. Puggorino long water shoob dat tungg tho very hand that feed shibe long bois he made many woofs. 
-        </p>
-         <button class="button2" id="facts-button">Facts</button>
-    </div> <br>
-</div>
-	  <footer>
-	  	<h4>Learn About Dogs Online
-	  	</h4>
-		<wrapper class="social">
-		<img src="file:///Users/julianenochs/Downloads/dogdownload/twitter.svg" alt="twitter" class="social1">
-		<img src="file:///Users/julianenochs/Downloads/dogdownload/instagram.svg" alt="instagram" class="social1">
-		<img src="file:///Users/julianenochs/Downloads/dogdownload/facebook.svg" alt="facebook" class="social1">
-		<img src="file:///Users/julianenochs/Downloads/dogdownload/linkedin.svg" alt="linked-in" class="social1">
-	</wrapper>
-	  </footer>
+	<footer>
+	  	<h4>Learn About Dogs Online</h4>
+		<div class="social">
+			<img
+				src="file:///Users/julianenochs/Downloads/dogdownload/instagram.svg"
+				alt="instagram" 
+				class="social-1"
+			>
+			<img
+				src="file:///Users/julianenochs/Downloads/dogdownload/twitter.svg" 
+				alt="twitter"
+				class="social-2"
+			>
+			<img
+				src="file:///Users/julianenochs/Downloads/dogdownload/linkedin.svg"
+				alt="linked-in"
+				class="social-3"
+			>
+			<img
+				src="file:///Users/julianenochs/Downloads/dogdownload/facebook.svg" 
+				alt="facebook"
+				class="social-4"
+			>
+		</div>
+	 </footer>
    </body>
 </html>
